-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.13, 6.2.7, 6.5.0
-
-
127e33d4c (dev), 7e063b92b (6.5)
In a simple QLineEdit and QGraphicsView application if the cursor is moved with the trackpad from line edit to QGraphicsview Line edit loses focus.
attached example reproduces this.
For Gerrit Dashboard: QTBUG-112922 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
474608,2 | Don't set focus when moving the cursor with a touch pad | dev | qt/qtbase | Status: MERGED | +2 | 0 |
475082,2 | Don't set focus when moving the cursor with a touch pad | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |